# pytest_project

./: .gitignore  README.MD  pyproject.toml
companies/: models.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py
companies/tests/: test_api.py  test_logging.py  test_other.py
config/: settings.py  urls.py
